# loggen

./: LICENSE  README.md
Code/: CMakeLists.txt  LoggenGlobal.h  global.h  loggen.c  loggen.h
Code/Error/: ErrorPub.h  error.c  error.h
Code/Help/: HelpPub.h  help.c  help.h
Code/Init/: Init.c  Init.h  InitPub.h
Code/LoggenCommand/: LoggenCommand.c  LoggenCommand.h  LoggenCommandPub.h
Code/LoggenHelp/: LoggenHelp.c  LoggenHelp.h  LoggenHelpPub.h
Code/LoggenInit/: LoggenInit.c  LoggenInit.h  LoggenInitPub.h
Code/LoggenSettings/: LoggenSettings.c  LoggenSettings.h  LoggenSettingsPub.h
Code/Struct/: LoggenStructCommand.h  LoggenStructHelp.h  LoggenStructInit.h  LoggenStructSettings.h  struct_error.h  struct_help.h  struct_init.h
Documents/: DevelopmentProgress.md  RunningProcess.md
